--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject.csproj
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.3" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
