--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MapApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trusted_Connection=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
