added db context and connection string for both authentication and application databases, data is displayed in view for both

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthenticationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MapAppConnection": "Server=(localdb)\\mssqllocaldb;Database=ApplicationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
