--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject.csproj
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
