--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthenticationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MapAppConnection": "Server=(localdb)\\mssqllocaldb;Database=ApplicationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthenticationConnection": "Server=tcp:otterproductionsserver.database.windows.net,1433;Initial Catalog=OtterProductionsAuthentication;Persist Security Info=False;User ID=otterproductionsadmin;Password=5oQ#8KCy7f16mb3CIZ;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "MapAppConnection": "Server=tcp:otterproductionsserver.database.windows.net,1433;Initial Catalog=OtterProductionsApplication;Persist Security Info=False;User ID=otterproductionsadmin;Password=5oQ#8KCy7f16mb3CIZ;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
