got the map back working. style sheet wasn't reading corectly

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.config.json
+*.config_osx.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
