--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject.csproj
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject.csproj
@@ -30,6 +30,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.4" />
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
   </ItemGroup>
