added email verification and set up using send grid api. Organizations can now sign up and when it is a new account, they will get an email and can click button to verify, will redirect to site and give message that verification is complete.

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
@@ -9,5 +9,16 @@
   "ConnectionStrings": {
     "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthenticationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true",
     "MapAppConnection": "Server=(localdb)\\mssqllocaldb;Database=ApplicationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "SendGrid": {
+    "ApiKey": "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",
+    "From": "no-reply@quantumzenith.com.ng",
+    "FromName": "no-reply"
+  },
+  "BaseUrlConfiguration": {
+    "BaseVeryUrl": "https://localhost:7196/", // we will change this later
+    "BaseUrl": "https://localhost:7196/",
+    "BasePaawordRestUrl": "https://localhost:7196/"
+
   }
 }
