changed appsettings for sendgrid

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
@@ -11,9 +11,9 @@
     "MapAppConnection": "Server=(localdb)\\mssqllocaldb;Database=ApplicationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "SendGrid": {
-    "ApiKey": "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",
-    "From": "no-reply@quantumzenith.com.ng",
-    "FromName": "no-reply"
+    "ApiKey": "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",
+    "From": "noreply@lemol.ao",
+    "FromName": "Leansan"
   },
   "BaseUrlConfiguration": {
     "BaseVeryUrl": "https://localhost:7196/", // we will change this later
