--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProduction+test/OtterProduction+test.csproj
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProduction+test/OtterProduction+test.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.9.0" />
   </ItemGroup>
 
 </Project>
