added bdd testing to project

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
@@ -14,8 +14,8 @@
   },
   "SendGrid": {
     "ApiKey": "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",
-    "From": "noreply@lemol.ao",
-    "FromName": "Leansan"
+    "From": "OtterProductions@gmail.com",
+    "FromName": "OtterProductions"
   },
   "BaseUrlConfiguration": {
     "BaseVeryUrl": "https://otterproductionscapstoneprojectwebapp.azurewebsites.net/", // we will change this later
