fixed organization error for event creation and new account saving events

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/appsettings.json
@@ -8,9 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthenticationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MapAppConnection": "Server=(localdb)\\mssqllocaldb;Database=ApplicationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AuthenticationConnection2": "Server=tcp:otterproductionsserver.database.windows.net,1433;Initial Catalog=OtterProductionsAuthentication;Persist Security Info=False;User ID=otterproductionsadmin;Password=Yf7m&w*aGRYF*3zUS0;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30",
-    "MapAppConnection2": ": Server=tcp:otterproductionsserver.database.windows.net,1433;Initial Catalog=OtterProductionsApplication;Persist Security Info=False;User ID=otterproductionsadmin;Password=Yf7m&w*aGRYF*3zUS0;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "MapAppConnection": "Server=(localdb)\\mssqllocaldb;Database=ApplicationOtterProductions_CapstoneProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"AuthenticationConnection": "Server=tcp:otterproductionsserver.database.windows.net,1433;Initial Catalog=OtterProductionsAuthentication;Persist Security Info=False;User ID=otterproductionsadmin;Password=Yf7m&w*aGRYF*3zUS0;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30",
+    //"MapAppConnection": "Server=tcp:otterproductionsserver.database.windows.net,1433;Initial Catalog=OtterProductionsApplication;Persist Security Info=False;User ID=otterproductionsadmin;Password=Yf7m&w*aGRYF*3zUS0;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "SendGrid": {
     "ApiKey": "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",
